--- a/add-product.ejs
+++ b/add-product.ejs
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
-    <link rel="stylesheet" href="/css/main.css">
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
+
 <body>
-    <header class="main-header">
-        <nav class="main-header_nav">
-            <ul class="main-header_itemlist">
-            <li class="main-header_items"><a href="/shop">Shop</a></li>
-            <li class="main-header_items"><a href="/admin/add-product" class="active">Add Product</a></li>
-            <li class="main-header_items"><a href="/contactus">Contact Us</a></li>
-        </ul>
-        </nav>
-    </header>
+   <%- include('../includes/navigation.ejs') %>
+
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
             </div>
-            <button type="submit">Add Product</button>
+            <div class="form-control">
+                <label for="imageUrl">Image URL</label>
+                <input type="text" name="imageUrl" id="imageUrl">
+            </div>
+            <div class="form-control">
+                <label for="price">Price</label>
+                <input type="number" name="price" id="price" step="0.01">
+            </div>
+            <div class="form-control">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" rows="5"></textarea>
+            </div>
 
+            <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
-</body>
-</html>
+<%- include('../includes/end.ejs') %>
